# Blaze

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  bool_low_pass_canopy.tif  build.sh  buildings.tif  canopy_thresh.tif  config.json  contours.crt  flatten.py  hill_shade_multi.tif  install-deps-windows.ps1  install-deps.sh  linux-build.sh  low_res_config.json  naive_countours.tif  resources.rc  slope.tif  smooth_grid.tif  vcpkg-configuration.json  vcpkg.json  vege_proportion.tif  versions.json
.github/workflows/: build.yml  cleanup-artifacts.yml  coverage.yml  docs.yml  qgis-plugin-test.yml  qgis-plugin.yml  release-app.yml  windows-build-no-vcpkg.yml
assets/: default_config.json  resources.rc
cmake/: FindDependencyDLLs.cmake  FindOpenMPDLL.cmake  FindProjData.cmake  copy_dlls.ps1
configs/: config.json  ib_config.json  low_res_config.json
dev/: 404.html  index.html  sitemap.xml
dev/about/: index.html
dev/contributing/: index.html
dev/installation/: index.html
dev/license/: index.html
dev/reference/: index.html
dev/search/: search_index.json
dev/usage/: index.html
docs/: .lychee.toml  .markdown-link-check.json  Doxyfile  installation.md  mkdocs.yml
docs/about/: contributing.md
docs/src/: contributing.md  index.md  installation.md  license.md  reference.md
docs/usage/: qgis-plugin.md  quick-guide.md
packaging/: Blaze.desktop.in  Blaze.nsi  Blaze3D.Info.plist.in  Blaze3D.desktop.in  NSIS.template.in  blaze-mimetypes.xml  resources.rc  resources.rc.in
packaging/debian/: postinst  postrm
qgis_plugin/: package_plugin.py
qgis_plugin/blaze_loader/: OSM_LAYER_CATALOG.md  __init__.py  blaze_loader.py  blaze_loader_dialog.py  blaze_loader_dialog_base.ui  create_qgis_project.py  metadata.txt  osm_regional_extract.py  requirements.txt
qgis_plugin/tests/: conftest.py  test_contour_merge.py  (+2 more)
scripts/: install-deps-windows.ps1  install-mac-deps.sh  install-macos-deps.sh  install-ubuntu-deps.sh  linux-build.sh  macos-build.sh  macos-bundle-assets.sh  macos-fix-deps.sh  macos-package.sh  macos-verify-bundle.sh  serve-docs.sh
src/: CMakeLists.txt  blaze.cpp  precompiled_headers.hpp  process.cpp  process.hpp  run.cpp  run.hpp
src/gui/: CMakeLists.txt  blaze_output_loader.hpp  camera.hpp  config_editor.cpp  config_editor.hpp  config_editor.ui  contour_layer_renderer.cpp  error_dialog.cpp  error_dialog.hpp  frustum.hpp  gl_check.cpp  gl_check.hpp  gl_widget.cpp  gl_widget.hpp  incremental_framebuffer.hpp  layer.hpp  layer_renderer.cpp  layer_renderer.hpp  main.cpp  main_3d.cpp  main_3d_window.cpp  main_3d_window.hpp  main_3d_window.ui  main_window.cpp  main_window.hpp  main_window.ui  mesh_layer_renderer.cpp  octree_las_data.hpp  octree_las_layer_renderer.cpp  point_cloud_framebuffer.cpp  point_cloud_framebuffer.hpp  point_cloud_gl.cpp  point_cloud_gl.hpp  point_cloud_visualization.hpp  point_octree.cpp  point_octree.hpp  progress_box.cpp  progress_box.hpp  progress_box.ui  raster_data.hpp  (+4 more)
src/gui/shaders/: mesh_fragment.glsl  mesh_vertex.glsl  point_fragment.glsl  point_vertex.glsl  shaders.qrc  textured_mesh_fragment.glsl  textured_mesh_vertex.glsl
src/gui/tests/: test_camera.cpp  test_frustum.cpp  test_octree.cpp
src/lib/: CMakeLists.txt
src/lib/assert/: assert.hpp  gdal_assert.hpp
src/lib/cliff/: cliff.hpp
src/lib/config_input/: CMakeLists.txt  config_input.cpp  config_input.hpp
src/lib/config_input/tests/: test_config_lookup.cpp  test_config_paths.cpp
src/lib/contour/: CMakeLists.txt  contour.cpp  contour.hpp  contour_gen.hpp
src/lib/contour/tests/: CMakeLists.txt  test_contour_gen.cpp  test_contour_ops.cpp  test_contour_utils.cpp
src/lib/crt/: crt.hpp
src/lib/dxf/: dxf.hpp
src/lib/geometry/: CMakeLists.txt  polygon.hpp  polygon_subtract.hpp
src/lib/geometry/tests/: test_polygon.cpp
src/lib/grid/: CMakeLists.txt  forward_grid.hpp  grid.cpp  grid.hpp  grid_ops.hpp  image.cpp  image.hpp  img_grid.cpp  img_grid.hpp  opencv_compat.cpp  opencv_compat.hpp  raster.hpp
src/lib/grid/tests/: CMakeLists.txt  test_grid.cpp  test_grid_ops.cpp  test_image.cpp  test_img_grid.cpp
src/lib/io/: crs.hpp  gdal_init.hpp  gpkg.hpp
src/lib/io/tests/: CMakeLists.txt  test_gpkg.cpp
src/lib/isom/: CMakeLists.txt  colors.cpp  colors.hpp  symbols.hpp
src/lib/isom/tests/: test_colors.cpp
src/lib/las/: CMakeLists.txt  binned_points.hpp  las_file.hpp  las_point.hpp  tile_mode.hpp
src/lib/las/tests/: test_las_file.cpp  test_las_point.cpp
src/lib/polyline/: polyline.hpp
src/lib/printing/: to_string.hpp
src/lib/testing/: env.hpp  output_dir.hpp
src/lib/tif/: CMakeLists.txt  tif.cpp  tif.hpp
src/lib/utilities/: CMakeLists.txt  coordinate.hpp  env.hpp  filesystem.hpp  grid.hpp  memory_tracker.cpp  memory_tracker.hpp  progress_tracker.cpp  progress_tracker.hpp  resources.cpp  resources.hpp  timer.hpp  trace_recorder.cpp  trace_recorder.hpp  tracked_allocator.hpp
src/lib/utilities/tests/: progress_tracker_helper.cpp  test_coordinate.cpp  test_progress_tracker.cpp
src/lib/vegetation/: CMakeLists.txt  vector_vege_render.hpp  vegetation.hpp  vegetation_polygon.hpp
src/lib/vegetation/tests/: test_vector_vege_render.cpp  test_vegetation.cpp  test_vegetation_polygon.cpp
src/methods/hill_shade/: hill_shade.hpp  slope.hpp
src/methods/water/: CMakeLists.txt  water.cpp  water.hpp
src/methods/water/tests/: CMakeLists.txt  test_water.cpp
src/tests/: CMakeLists.txt  test_e2e.cpp  test_process.cpp
v0.0.1/: 404.html  index.html  sitemap.xml
v0.0.2/: 404.html  index.html  sitemap.xml
v0.0.3/: 404.html  index.html  sitemap.xml
v0.0.4/: 404.html  index.html  sitemap.xml
v0.0.5/: 404.html  index.html  sitemap.xml
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.1/: 404.html  index.html  sitemap.xml
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.1/: 404.html  index.html  sitemap.xml
v0.2.2/: 404.html  index.html  sitemap.xml
v0.2.3/: 404.html  index.html  sitemap.xml
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.1/: 404.html  index.html  sitemap.xml
(+6677 files in other folders)
